--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
+    <meta name="google-site-verification" content="_R2MrlV0Pcm-hRilC58zdS1rjTUufasdHZMS34ImRcw" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body class="is-preload">
