--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
                             <li>謝翔丞 (始於 2024)</li>
                         </ul>
                         <h5>碩士班</h5>
+			<blockquote>
+                            Class 2025                      
+                            <br />王品智、廖安豪、李苡辰、林冠丞、梁欣童、曾奕程
+                        </blockquote>
                         <blockquote>
                             Class 2024                      
                             <br />蔡明軒、謝翔丞、彭馨屏、陳旻寬、陳弘翔
